Update code to prepare for Spring Boot 4 (#607)
* Prepare for Spring Boot 4

* Add Open API validation

* Re-enable S3 tests

* Clean up code

* Code cleanup

* Fix method name

* Fix javadocs