@@ -34,6 +34,8 @@ import static us.fatehi.schemacrawler.webapp.controller.URIConstants.API_PREFIX;
 import static us.fatehi.schemacrawler.webapp.controller.URIConstants.UI_RESULTS_PREFIX;
 import static us.fatehi.schemacrawler.webapp.service.storage.FileExtensionType.JSON;
 import static us.fatehi.schemacrawler.webapp.service.storage.FileExtensionType.PNG;
+
+import jakarta.validation.constraints.NotNull;
 import java.nio.file.Path;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -46,11 +48,9 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.ResponseBody;
-import jakarta.validation.constraints.NotNull;
 import schemacrawler.schemacrawler.exceptions.ExecutionRuntimeException;
 import us.fatehi.schemacrawler.webapp.model.DiagramKey;
 import us.fatehi.schemacrawler.webapp.model.DiagramRequest;
-import us.fatehi.schemacrawler.webapp.service.processing.ProcessingService;
 import us.fatehi.schemacrawler.webapp.service.storage.StorageService;
 
 @Controller
@@ -61,9 +61,7 @@ public class DiagramResultController {
   private final StorageService storageService;
 
   public DiagramResultController(
-      @NotNull(message = "StorageService not provided") final StorageService storageService,
-      @NotNull(message = "ProcessingService not provided")
-          final ProcessingService processingService) {
+      @NotNull(message = "StorageService not provided") final StorageService storageService) {
     this.storageService = storageService;
   }
 
@@ -106,7 +104,6 @@ public class DiagramResultController {
    * @throws Exception On an exception
    */
   @GetMapping(value = API_PREFIX + "/{key}", produces = MediaType.APPLICATION_JSON_VALUE)
-  @ResponseBody
   public ResponseEntity<DiagramRequest> retrieveResultsApi(
       @PathVariable @NotNull(message = "Key not provided") final DiagramKey key) throws Exception {
 
@@ -114,7 +111,7 @@ public class DiagramResultController {
     try {
       diagramRequest = retrieveResults(key);
     } catch (final Exception e) {
-      LOGGER.error(String.format("<%s>: %s", key, e.getMessage()));
+      LOGGER.error("<%s>: %s".formatted(key, e.getMessage()));
       LOGGER.trace(e.getMessage(), e);
       return ResponseEntity.notFound().build();
     }
@@ -126,8 +123,7 @@ public class DiagramResultController {
     return storageService
         .retrieveLocal(key, PNG)
         .map(PathResource::new)
-        .orElseThrow(
-            () -> new ExecutionRuntimeException(String.format("Cannot find key <%s>", key)));
+        .orElseThrow(() -> new ExecutionRuntimeException("Cannot find key <%s>".formatted(key)));
   }
 
   private DiagramRequest retrieveResults(final DiagramKey key) throws Exception {
@@ -135,9 +131,7 @@ public class DiagramResultController {
         storageService
             .retrieveLocal(key, JSON)
             .orElseThrow(
-                () ->
-                    new ExecutionRuntimeException(
-                        String.format("Cannot find request for <%s>", key)));
+                () -> new ExecutionRuntimeException("Cannot find request for <%s>".formatted(key)));
     final DiagramRequest diagramRequest =
         DiagramRequest.fromJson(newBufferedReader(jsonFile, UTF_8));
     return diagramRequest;
