@@ -34,20 +34,20 @@ import static java.nio.file.Files.delete;
 import static java.nio.file.Files.size;
 import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
 import static org.apache.commons.io.IOUtils.copy;
+
+import jakarta.annotation.PostConstruct;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 import java.util.UUID;
+import org.jspecify.annotations.NonNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.context.annotation.Profile;
 import org.springframework.core.io.InputStreamSource;
-import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Service;
-import jakarta.annotation.PostConstruct;
 import schemacrawler.schemacrawler.exceptions.InternalRuntimeException;
 import software.amazon.awssdk.services.s3.S3Client;
 import us.fatehi.schemacrawler.webapp.model.DiagramKey;
@@ -73,7 +73,7 @@ public class AmazonS3StorageService implements StorageService {
         s3Client.headBucket(b -> b.bucket(s3Bucket)).sdkHttpResponse().isSuccessful();
     if (!bucketExists) {
       throw new InternalRuntimeException(
-          String.format("Amazon S3 bucket <%s> does not exist", s3Bucket));
+          "Amazon S3 bucket <%s> does not exist".formatted(s3Bucket));
     }
   }
 
@@ -89,10 +89,9 @@ public class AmazonS3StorageService implements StorageService {
     try {
       final String filename = key + "." + extension.getExtension();
       final Path tempFilePath =
-          Paths.get(
+          Path.of(
               System.getProperty("java.io.tmpdir"),
-              String.format(
-                  "sc-webapp-%s-%s.%s", key, UUID.randomUUID(), extension.getExtension()));
+              "sc-webapp-%s-%s.%s".formatted(key, UUID.randomUUID(), extension.getExtension()));
 
       // Download file from S3 to a local temporary file
       // IMPORTANT: Temporary file should not exist
@@ -101,14 +100,14 @@ public class AmazonS3StorageService implements StorageService {
       // Check that the file is not empty
       if (size(tempFilePath) == 0) {
         delete(tempFilePath);
-        LOGGER.warn(String.format("No data for file <%s.%s>", key, extension));
+        LOGGER.warn("No data for file <%s.%s>".formatted(key, extension));
         return Optional.empty();
       }
 
       return Optional.of(tempFilePath);
 
     } catch (final Exception e) {
-      LOGGER.warn(String.format("Could not retrieve file <%s.%s>", key, extension), e);
+      LOGGER.warn("Could not retrieve file <%s.%s>".formatted(key, extension), e);
       return Optional.empty();
     }
   }
@@ -128,7 +127,7 @@ public class AmazonS3StorageService implements StorageService {
       final String filename = key + "." + extension.getExtension();
       final Path tempFilePath = createTempFile(null, filename).toAbsolutePath();
       try (final InputStream inputStream = streamSource.getInputStream();
-          final OutputStream outputStream = Files.newOutputStream(tempFilePath); ) {
+          final OutputStream outputStream = Files.newOutputStream(tempFilePath) ) {
         copy(inputStream, outputStream);
       }
 
@@ -136,7 +135,7 @@ public class AmazonS3StorageService implements StorageService {
       s3Client.putObject(b -> b.bucket(s3Bucket).key(filename), tempFilePath);
 
     } catch (final Exception e) {
-      LOGGER.warn(String.format("Could not store <%s.%s>", key, extension), e);
+      LOGGER.warn("Could not store <%s.%s>".formatted(key, extension), e);
     }
   }
 
@@ -155,7 +154,7 @@ public class AmazonS3StorageService implements StorageService {
     // Check that the file is not empty
     if (size(tempFilePath) == 0) {
       delete(tempFilePath);
-      throw new Exception(String.format("No data for file <%s.%s>", key, extension));
+      throw new Exception("No data for file <%s.%s>".formatted(key, extension));
     }
 
     return tempFilePath;
