@@ -42,26 +42,23 @@ import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
-import org.testcontainers.containers.localstack.LocalStackContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
+import org.testcontainers.localstack.LocalStackContainer;
 import software.amazon.awssdk.services.s3.S3Client;
 import software.amazon.awssdk.services.s3.model.S3Object;
 import us.fatehi.schemacrawler.webapp.model.DiagramRequest;
 import us.fatehi.schemacrawler.webapp.test.utility.LocalStackTestUtility;
 import us.fatehi.schemacrawler.webapp.test.utility.S3ServiceControllerTestConfig;
 
-@ExtendWith(SpringExtension.class)
 @AutoConfigureMockMvc
 @SpringBootTest(
     properties = {
@@ -77,7 +74,7 @@ public class RequestControllerWithS3Test {
 
   @Container
   public static final LocalStackContainer localstack =
-      LocalStackTestUtility.newLocalStackContainerContainer();
+      LocalStackTestUtility.newLocalStackContainer();
 
   static {
     localstack.start();
@@ -120,7 +117,7 @@ public class RequestControllerWithS3Test {
 
     assertThat(contents.size(), is(greaterThan(0)));
 
-    assertThat(contents.get(0).key(), is(diagramRequest.getKey() + ".db"));
-    assertThat(contents.get(0).size(), is(greaterThan(9_200L)));
+    assertThat(contents.getFirst().key(), is(diagramRequest.getKey() + ".db"));
+    assertThat(contents.getFirst().size(), is(greaterThan(9_200L)));
   }
 }
